elyreacts/src/components/styles/FormInput.module.scss
@import "../../variables.scss";

.container {
    position: relative;

    margin-top: 0.5rem;

    & > label {
        position: absolute;
        top: 0.75rem;
        left: 0.5rem;

        pointer-events: none;

        font-size: 1rem;
        text-transform: uppercase;

        color: $color_grey_dark;

        transition: $transition_time_link;
    }

    & > input {
        box-shadow: none; // Remove ugly red outline

        transition: $transition_time_anim;

        border: none;
        border-left: 0.15rem solid $color_grey_dark;
        box-sizing: border-box;

        margin: 0.25rem 0 0 0;

        width: 16rem;

        &:valid {
            border-color: $color_success;
        }
        &:invalid {
            border-color: $color_fail;
        }
        &:focus,
        &[value=""]:not(:invalid) {
            border-color: $color_grey_dark;
        }
    }

    &:focus-within > input,
    & > input:not([value=""]) {
        margin-top: 1.25rem;
    }

    &:focus-within > label,
    & > input:not([value=""]) + label /* When element contains text */ {
        // todo: Do we need this too?
        // & > input:invalid + label /* When element contains text */
        top: 0.25rem;
        // top: 1.75rem;
        left: 0rem;

        font-size: 0.75rem;
    }
}

.radioContainer {
    margin-top: 1.5rem;

    width: 100%;

    & > label {
        pointer-events: none;

        font-size: 1rem;
        text-transform: uppercase;

        color: $color_grey_dark;
    }

    & > .radioOptionsContainer {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        justify-content: flex-start;

        margin-top: 0.5rem;

        & > .radioOption {
            display: inline-block;

            & > label {
                display: inline-block;
                text-transform: uppercase;

                color: $color_grey_light;

                padding: 0.5em 1em;

                transition: $transition_time_link;
            }

            & > input {
                display: none;

                &:checked + label {
                    font-weight: bolder;
                    color: $color_white;

                    background: $color_indywalls_primary;
                }
            }
        }
    }
}

